version/stable/_sources/api/ansys/mechanical/stubs/v241/Ansys/ACT/Mechanical/Fields/Adapters/FieldAdapter.rst.txt
.. vale off



:class:`FieldAdapter`
=====================

.. py:class:: ansys.mechanical.stubs.v241.Ansys.ACT.Mechanical.Fields.Adapters.FieldAdapter

   Bases: :py:obj:`object`


   
   Base class for objects that handle the interface between the generic boundary condition wrapper and the various types of concrete object implemented in Mechanical.
















   ..
       !! processed by numpydoc !!


.. py:currentmodule:: FieldAdapter

Overview
--------

.. tab-set::



   .. tab-item:: Methods

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~ChangeFieldDefinitionType`
            - Changes the definition type for a field of the wrapped object from Mechanical.


   .. tab-item:: Properties

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~FieldProvider`
            - Gets the wrapped object from Mechanical.







Property detail
---------------
.. py:property:: FieldProvider
   :type: Optional[Ansys.Common.Interop.DSObjects.IDSBCInformation]


   
   Gets the wrapped object from Mechanical.
















   ..
       !! processed by numpydoc !!





Method detail
-------------
.. py:method:: ChangeFieldDefinitionType(fieldType: Ansys.Common.Interop.CAERepObjects.AnsBCLVType, newType: Ansys.Common.Interop.AnsMaterial.kEDDataType) -> None

   
   Changes the definition type for a field of the wrapped object from Mechanical.

   ..
       !! processed by numpydoc !!



.. vale on